@@ -1,3 +1,4 @@
-<html><body><b>C+r C+c <i>X</i></b> copies the selected text to register
+<html><body>jEdit's register feature is a powerful extension of the clipboard
+metaphor. <b>C+r C+c <i>X</i></b> copies the selected text to register
 <i>X</i>. <b>C+r C+v <i>X</i></b> inserts the contents of register
-<i>X</i> into the buffer.</body></html>
+<i>X</i> into the buffer. Register contents are persistent between editing sessions.</body></html>
