@@ -1,0 +1,10 @@
+<html><body>
+You can insert a string at a specific column on a range of lines using rectangular selections. For example, suppose you want to insert <code>static</code> in front of each of these lines:
+
+<pre>int begin;
+int end;
+long balance;</pre>
+
+Simply <b>Control</b>-drag to form a rectangular selection of zero width at the desired column, and either <b>Paste</b>, or start typing. The text will be inserted in each line at once.
+
+</body></html>
